# stt2vtt

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
src/: __init__.py  cli.py  stt_to_vtt.py
stt2vtt/: __init__.py  _core.py  cli.py  schemas.py
tests/: test_cli.py  test_stt_to_vtt.py
tests/test_data/: earth-expected.vtt  earth-input.json  jp-expected.vtt  jp2-expected.vtt  jp2-input.json  street-expected.vtt  video2-expected.vtt  video2-input.json  video3-expected.vtt  video3-input.json
tests/test_data/fast-whisper/: jp-input.json  street-input.json
